# AnalyzingAnyone

./: .gitignore  README.md  config.yaml  ingest_test.py  llm.example.yaml  loader.py  main.py  pyproject.toml  runtime.py  schemas.py  storage.py  中间层完成说明.md
agents/: AGENT_GUIDE.md
agents/critic/: agent.yaml  prompt.md
agents/evidence_assembler/: agent.yaml  prompt.md
agents/extractor/: agent.yaml  prompt.md
agents/reporter/: agent.yaml  prompt.md
agents/synthesizer/: agent.yaml  prompt.md
agents/triangulator/: agent.yaml  prompt.md
app/: errors.py  main.py  repository.py  schemas.py  service.py
app/routes/: analysis_tiers.py  projects.py
data/barack_obama/: manifest.json
data/elon_musk/: manifest.json
data/paul_graham/: manifest.json
data/sam_altman/: manifest.json
data/steve_jobs/: manifest.json
docs/: analysis-tier-interface.md  middleware-contract.md
frontend/: index.html
frontend/src/: App.jsx  api.js  constants.js  i18n.js  main.jsx  styles.css
output/elon_musk/: analysis_cs_engineering.json  analysis_neuroscience.json  analysis_philosophy.json  analysis_psychology.json  analysis_sociology.json  assembly.json  critic_output.json  events.json  report.md  synthesis.json  triangulation.json
output/obama/: assembly.json  compact_lenses.json  critic_output.json  report.md  synthesis.json
scripts/: fetch_obama_weekly_addresses.py  fetch_paul_graham_essays.py  fetch_sam_altman_blog.py  fetch_steve_jobs_book.py  run_medicine_example.py  test_openai_compat_api.py
skills/source_context/: biography.yaml  blog.yaml  book_excerpt.yaml  (+9 more)
(+671 files in other folders)
