[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "openpyxl>=3.1",
    "pydantic>=2.0",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "uvicorn>=0.30",
]
